// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 Simple @beta and @internal extraction 1`] = `
Object {
  "_0_lines": Array [
    "START @beta",
    "@unknownTag",
    "@internal @internal END",
  ],
  "_1_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "PlainText",
        "nodeExcerpt": "START ",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@unknownTag",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " ",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " END",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_2_remarksBlock": undefined,
  "_3_customBlocks": Array [],
  "_4_paramBlocks": Array [],
  "_5_returnsBlock": undefined,
  "_6_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@beta",
    },
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@internal",
    },
  ],
  "_7_logMessages": Array [],
}
`;

exports[`02 A basic TSDoc comment with all components 1`] = `
Object {
  "_0_lines": Array [
    "Adds two numbers together.",
    "",
    "@remarks",
    "This method is part of the {@link core-library/Math | Math subsystem}.",
    "",
    "@customBlock",
    "This is a custom block containing an @undefinedBlockTag",
    "",
    "@param x - The first number to add",
    "@param y - The second number to add",
    "@returns The sum of [c]x[c] and [c]y[c]",
    "",
    "@beta @customModifier",
  ],
  "_1_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "PlainText",
        "nodeExcerpt": "Adds two numbers together.",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_2_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@remarks",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": "This method is part of the ",
      },
      Object {
        "kind": "InlineTag",
        "nodes": Array [
          Object {
            "kind": "Particle",
            "nodeExcerpt": "{",
          },
          Object {
            "kind": "Particle",
            "nodeExcerpt": "@link",
          },
          Object {
            "kind": "Particle",
            "nodeExcerpt": " core-library/Math | Math subsystem",
          },
          Object {
            "kind": "Particle",
            "nodeExcerpt": "}",
          },
        ],
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": ".",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_3_customBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@customBlock",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": "This is a custom block containing an ",
        },
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@undefinedBlockTag",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
  ],
  "_4_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "x",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": "The first number to add",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "y",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": "The second number to add",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
  ],
  "_5_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " The sum of ",
      },
      Object {
        "kind": "CodeSpan",
        "nodeExcerpt": "[c]x[c]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " and ",
      },
      Object {
        "kind": "CodeSpan",
        "nodeExcerpt": "[c]y[c]",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " ",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_6_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@beta",
    },
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@customModifier",
    },
  ],
  "_7_logMessages": Array [],
}
`;

exports[`03 Incomplete @param blocks 1`] = `
Object {
  "_0_lines": Array [
    "@param - The first number to add",
    "@param y The first number to add",
    "@returns The sum of [c]x[c] and [c]y[c]",
  ],
  "_1_summarySection": Object {
    "kind": "Section",
  },
  "_2_remarksBlock": undefined,
  "_3_customBlocks": Array [],
  "_4_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
        },
        Object {
          "kind": "Particle",
        },
        Object {
          "kind": "Particle",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": " - The first number to add",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
        },
        Object {
          "kind": "Particle",
        },
        Object {
          "kind": "Particle",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": " y The first number to add",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
  ],
  "_5_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " The sum of ",
      },
      Object {
        "kind": "CodeSpan",
        "nodeExcerpt": "[c]x[c]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " and ",
      },
      Object {
        "kind": "CodeSpan",
        "nodeExcerpt": "[c]y[c]",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_6_modifierTags": Array [],
  "_7_logMessages": Array [
    "(2,4): The @param block should be followed by a parameter name",
    "(3,4): The @param block should be followed by a parameter name and then a hyphen",
  ],
}
`;

exports[`03 Jumbled order 1`] = `
Object {
  "_0_lines": Array [
    "Adds two numbers together. @remarks This method is part of the",
    "{@link core-library/Math | Math subsystem}.",
    "@beta @customModifier",
    "@returns The sum of [c]x[c] and [c]y[c]",
    "@param x - The first number to add @param y - The second number to add",
    "@customBlock",
    "This is a custom block containing an @undefinedBlockTag",
  ],
  "_1_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "PlainText",
        "nodeExcerpt": "Adds two numbers together. ",
      },
    ],
  },
  "_2_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@remarks",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " This method is part of the",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "InlineTag",
        "nodes": Array [
          Object {
            "kind": "Particle",
            "nodeExcerpt": "{",
          },
          Object {
            "kind": "Particle",
            "nodeExcerpt": "@link",
          },
          Object {
            "kind": "Particle",
            "nodeExcerpt": " core-library/Math | Math subsystem",
          },
          Object {
            "kind": "Particle",
            "nodeExcerpt": "}",
          },
        ],
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": ".",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " ",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_3_customBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@customBlock",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": "This is a custom block containing an ",
        },
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@undefinedBlockTag",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
  ],
  "_4_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "x",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": "The first number to add ",
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "y",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "PlainText",
          "nodeExcerpt": "The second number to add",
        },
        Object {
          "kind": "SoftBreak",
          "nodeExcerpt": "[n]",
        },
      ],
    },
  ],
  "_5_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " The sum of ",
      },
      Object {
        "kind": "CodeSpan",
        "nodeExcerpt": "[c]x[c]",
      },
      Object {
        "kind": "PlainText",
        "nodeExcerpt": " and ",
      },
      Object {
        "kind": "CodeSpan",
        "nodeExcerpt": "[c]y[c]",
      },
      Object {
        "kind": "SoftBreak",
        "nodeExcerpt": "[n]",
      },
    ],
  },
  "_6_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@beta",
    },
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@customModifier",
    },
  ],
  "_7_logMessages": Array [],
}
`;
